@startuml

' Define entities
entity "Profiles" as profiles {
    + id: UUID
    --
    first_name: VARCHAR(100)
    last_name: VARCHAR(100)
    profile_picture_url: TEXT
    phone: VARCHAR(20)
    email: VARCHAR(128)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "Experience" as experience {
    + id: INTEGER
    --
    user_id: UUID
    job_title: VARCHAR(100)
    company_name: VARCHAR(100)
    is_current_job: BOOLEAN
    start_date: DATE
    end_date: DATE
    description: TEXT
}

entity "Skills" as skills {
    + id: INTEGER
    --
    user_id: UUID
    skill_name: VARCHAR(100)
    proficiency_level: VARCHAR(50)
}

entity "Education" as education {
    + id: INTEGER
    --
    user_id: UUID
    institution_name: VARCHAR(100)
    degree: VARCHAR(100)
    field_of_study: VARCHAR(100)
    start_date: DATE
    end_date: DATE
    description: TEXT
}

entity "Job Applications" as job_applications {
    + id: INTEGER
    --
    user_id: UUID
    application_url: VARCHAR(250)
    job_title: VARCHAR(100)
    company_name: VARCHAR(100)
    application_date: TIMESTAMP
    status: VARCHAR(50)
    notes: TEXT
}

entity "Cover Letters" as cover_letters {
    + id: INTEGER
    --
    job_application_id: INTEGER
    cover_letter: TEXT
}

' Define relationships
profiles ||--o{ experience
profiles ||--o{ skills
profiles ||--o{ education
profiles ||--o{ job_applications
job_applications ||--o{ cover_letters

@enduml
